vbnc/vbnc/tests/Errors/30311-11.vb
Class T
    Const M_Date As Date = 1D
End Class